# pydantic-sqlalchemy

./: .coveragerc  .gitignore  README.md  pyproject.toml  release-notes.md  requirements-github-actions.txt  requirements-tests.txt  requirements.txt  setup.py  tasks.md
.github/: FUNDING.yml  dependabot.yml  labeler.yml
.github/DISCUSSION_TEMPLATE/: questions.yml
.github/ISSUE_TEMPLATE/: config.yml  privileged.yml
.github/workflows/: issue-manager.yml  labeler.yml  latest-changes.yml  publish.yml  smokeshow.yml  test.yml
__generated_sample/: hello.py
pydantic_sqlalchemy/: ModelsCollector.py  __init__.py  codegen_from_collected_models.py  dialect.py  extract_from_sqlalchemy.py  main.py  models_collector.py  module_path_typ.py  quick_run.py  template.py  write_model.py
pydantic_sqlalchemy/stub_imports_before_codegen/: aa.py  import_stubber_finder.py  import_stubber_installer.py  import_stubber_loader.py
pydantic_sqlalchemy/utils/: trim_indent.py
scripts/: format-imports.sh  format.sh  lint.sh  test-cov-html.sh  test.sh
sqlalchemy_dantic/: __init__.py  main.py
tests/: conftest.py  test_pydantic_sqlalchemy.py  test_sqlalchemy_dantic.py
tests/fixtures/: Address.py  Base.py  Point.py  Removable.py  User.py
to_generate_sample/: circular1.py  circular2.py  test.py
