[tool.poetry]
name = "pydantic-sqlalchemy"
version = "1.0.0"
description = "Tools to convert SQLAlchemy models to Pydantic models"
authors = ["Sebastián Ramírez <tiangolo@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
sqlalchemy = "^1.4.0"
pydantic = "^2.0.3"

# Local development dependencies
jupyter = {version = "^1.0.0", optional = true, extras = ["dev"]}
autoflake = {version = "^1.3.1", optional = true, extras = ["dev"]}
flake8 = {version = "^3.7.9", optional = true, extras = ["dev"]}


[tool.poetry.dev-dependencies]
mypy = "^0.770"
black = "^19.10b0"
isort = "^4.3.21"
pytest = "^5.4.1"
sqlalchemy-stubs = "^0.3"
pytest-cov = "^2.8.1"

[tool.poetry.extras]

dev = ["autoflake", "flake8", "jupyter"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-version-plugin]
source = "init"
